--- a/profile.html
+++ b/profile.html
@@ -198,7 +198,7 @@ footer{
 </div>
 
 <h1 style="margin-top:1rem;">Phạm Yến Nhi</h1>
-<p>Sinh viên Công nghệ thông tin | Định hướng Java & Web Developer</p>
+<p>Sinh viên Công nghệ thông tin | Định hướng Web Developer</p>
 
 <!-- ===== THÔNG TIN ===== -->
 <div class="section">
@@ -211,7 +211,7 @@ footer{
   <p><b>Ngành:</b> Công nghệ thông tin</p>
   <p><b>Trường:</b> HUTECH</p>
   <p><b>Email:</b> pynhivvk@gmail.com</p>
-  <p><b>Định hướng:</b> Java / Web Developer</p>
+  <p><b>Định hướng:</b> Web Developer</p>
 </div>
 </div>
 
@@ -219,7 +219,7 @@ footer{
 <div class="section">
 <h2>👋 Giới thiệu</h2>
 <p>
-Mình là sinh viên ngành Công nghệ thông tin, yêu thích lập trình Java và phát triển Web.
+Mình là sinh viên ngành Công nghệ thông tin, yêu thích lập trình phát triển Web.
 Mình luôn chủ động học hỏi, rèn luyện tư duy logic và xây dựng các dự án cá nhân để
 nâng cao kỹ năng chuyên môn, chuẩn bị cho môi trường làm việc thực tế.
 </p>
@@ -268,7 +268,7 @@ nâng cao kỹ năng chuyên môn, chuẩn bị cho môi trường làm việc t
 <div class="section">
 <h2>🎯 Mục tiêu nghề nghiệp</h2>
 <p>
-Mình muốn trở thành Java/Web Developer vững nền tảng,
+Mình muốn trở thành Web Developer vững nền tảng,
 hướng đến phát triển các hệ thống phần mềm lớn,
 ổn định và có giá trị thực tiễn cho doanh nghiệp.
 </p>
